; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_svn/extr_editorp.c_ra_svn_handle_add_dir.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_svn/extr_editorp.c_ra_svn_handle_add_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 (i8*, i32, i8*, i32, i32*, i8**)* }
%struct.TYPE_9__ = type { i32, i32 }

@.str = private unnamed_addr constant [9 x i8] c"css(?cr)\00", align 1
@FALSE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*, %struct.TYPE_10__*)* @ra_svn_handle_add_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ra_svn_handle_add_dir(i32* %0, i32* %1, i32* %2, %struct.TYPE_10__* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_10__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_9__*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store %struct.TYPE_10__* %3, %struct.TYPE_10__** %8, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @svn_ra_svn__parse_tuple(i32* %17, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %9, i32** %11, i32** %12, i8** %10, i32* %13)
  %19 = call i32 @SVN_ERR(i32 %18)
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = load i32, i32* @FALSE, align 4
  %23 = call i32 @lookup_token(%struct.TYPE_10__* %20, i32* %21, i32 %22, %struct.TYPE_9__** %14)
  %24 = call i32 @SVN_ERR(i32 %23)
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %14, align 8
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32* @svn_pool_create(i32 %27)
  store i32* %28, i32** %15, align 8
  %29 = load i8*, i8** %9, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = call i8* @svn_relpath_canonicalize(i8* %29, i32* %30)
  store i8* %31, i8** %9, align 8
  %32 = load i8*, i8** %10, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %34, label %47

34:                                               ; preds = %4
  %35 = load i8*, i8** %10, align 8
  %36 = call i64 @svn_path_is_url(i8* %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %34
  %39 = load i8*, i8** %10, align 8
  %40 = load i32*, i32** %6, align 8
  %41 = call i8* @svn_uri_canonicalize(i8* %39, i32* %40)
  store i8* %41, i8** %10, align 8
  br label %46

42:                                               ; preds = %34
  %43 = load i8*, i8** %10, align 8
  %44 = load i32*, i32** %6, align 8
  %45 = call i8* @svn_fspath__canonicalize(i8* %43, i32* %44)
  store i8* %45, i8** %10, align 8
  br label %46

46:                                               ; preds = %42, %38
  br label %47

47:                                               ; preds = %46, %4
  %48 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %49 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %48, i32 0, i32 0
  %50 = load %struct.TYPE_8__*, %struct.TYPE_8__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %50, i32 0, i32 0
  %52 = load i32 (i8*, i32, i8*, i32, i32*, i8**)*, i32 (i8*, i32, i8*, i32, i32*, i8**)** %51, align 8
  %53 = load i8*, i8** %9, align 8
  %54 = load %struct.TYPE_9__*, %struct.TYPE_9__** %14, align 8
  %55 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %54, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = load i8*, i8** %10, align 8
  %58 = load i32, i32* %13, align 4
  %59 = load i32*, i32** %15, align 8
  %60 = call i32 %52(i8* %53, i32 %56, i8* %57, i32 %58, i32* %59, i8** %16)
  %61 = call i32 @SVN_CMD_ERR(i32 %60)
  %62 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %63 = load i8*, i8** %16, align 8
  %64 = load i32*, i32** %12, align 8
  %65 = load i32, i32* @FALSE, align 4
  %66 = load i32*, i32** %15, align 8
  %67 = call i32 @store_token(%struct.TYPE_10__* %62, i8* %63, i32* %64, i32 %65, i32* %66)
  %68 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %68
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_ra_svn__parse_tuple(i32*, i8*, i8**, i32**, i32**, i8**, i32*) #1

declare dso_local i32 @lookup_token(%struct.TYPE_10__*, i32*, i32, %struct.TYPE_9__**) #1

declare dso_local i32* @svn_pool_create(i32) #1

declare dso_local i8* @svn_relpath_canonicalize(i8*, i32*) #1

declare dso_local i64 @svn_path_is_url(i8*) #1

declare dso_local i8* @svn_uri_canonicalize(i8*, i32*) #1

declare dso_local i8* @svn_fspath__canonicalize(i8*, i32*) #1

declare dso_local i32 @SVN_CMD_ERR(i32) #1

declare dso_local i32 @store_token(%struct.TYPE_10__*, i8*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
